--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,17 +1,18 @@
 def supportVersion = "25.3.1"
 def rxBindingVersion = "0.4.0"
-def retrofitVersion = "2.2.0"
+def retrofitVersion = "2.3.0"
 def okHttpVersion = "3.7.0"
 def stethoVersion = "1.5.0"
-def butterKnifeVersion = "8.5.1"
+def butterKnifeVersion = "8.7.0"
 def daggerVersion = "2.8"
+def rxlifecycle2SdkVersion =  "2.1.0"
 
 project.ext {
     android = [
             compileSdkVersion: 25,
             buildToolsVersion: "25.0.3",
             applicationId    : "com.bruce.note.greennote",
-            minSdkVersion    : 15,
+            minSdkVersion    : 16,
             targetSdkVersion : 25,
             versionCode      : 1,
             versionName      : "1.0"
@@ -24,21 +25,40 @@ project.ext {
             "design"                      : "com.android.support:design:${supportVersion}",
             "recyclerview"                : "com.android.support:recyclerview-v7:${supportVersion}",
             "cardview"                    : "com.android.support:cardview-v7:${supportVersion}",
+            "annotations"                 : "com.android.support:support-annotations:${supportVersion}",
 
             //java8-support
             "stream"                      : "com.annimon:stream:1.0.8",
 
             //rx
-            "rxandroid"                   : "io.reactivex:rxandroid:1.2.1",
             "rxbinding"                   : "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}",
             "rxbinding-support-v4"        : "com.jakewharton.rxbinding:rxbinding-support-v4:${rxBindingVersion}",
             "rxbinding-appcompat-v7"      : "com.jakewharton.rxbinding:rxbinding-appcompat-v7:${rxBindingVersion}",
             "rxbinding-design"            : "com.jakewharton.rxbinding:rxbinding-design:${rxBindingVersion}",
             "rxbinding-recyclerview-v7"   : "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:${rxBindingVersion}",
 
-            //retrofit
+            //rx2
+            "rxandroid2"                  : "io.reactivex.rxjava2:rxandroid:2.0.1",
+            "rxjava2"                     : "io.reactivex.rxjava2:rxjava:2.1.1",
+            "rxlifecycle2"                : "com.trello.rxlifecycle2:rxlifecycle:${rxlifecycle2SdkVersion}",
+            "rxlifecycle2-components"     : "com.trello.rxlifecycle2:rxlifecycle-components:${rxlifecycle2SdkVersion}",
+            "rxcache2"                    : "com.github.VictorAlbertos.RxCache:runtime:1.8.1-2.x",
+            "rxpermissions2"              : "com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar",
+            "rxerrorhandler2"             : "me.jessyan:rxerrorhandler:2.0.2",
+
+            //network retrofit
             "retrofit"                    : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
             "adapter-rxjava"              : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
+            "retrofit-converter-gson"     : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
+            "retrofit-adapter-rxjava2"    : "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
+            "okhttp3"                     : "com.squareup.okhttp3:okhttp:3.8.1",
+            "okhttp-urlconnection"        : "com.squareup.okhttp:okhttp-urlconnection:2.0.0",
+            "okhttp3-logging-interceptor" : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
+            "retrofit2-fastjson-converter": "com.github.BaronZ88:Retrofit2-FastJson-Converter:1.2",
+
+            // image
+            "glide"                       : "com.github.bumptech.glide:glide:3.8.0",
+            "picasso"                     : "com.squareup.picasso:picasso:2.5.2",
 
             //dagger
             "dagger"                      : "com.google.dagger:dagger:${daggerVersion}",
@@ -49,13 +69,11 @@ project.ext {
             "stetho-okhttp3"              : "com.facebook.stetho:stetho-okhttp3:${stethoVersion}",
 
             //others
-            "okhttp3-logging-interceptor" : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
             "ormlite-android"             : "com.j256.ormlite:ormlite-android:4.48",
             "fastjson"                    : "com.alibaba:fastjson:1.2.31",
             "butterknife"                 : "com.jakewharton:butterknife:${butterKnifeVersion}",
             "butterknife-compiler"        : "com.jakewharton:butterknife-compiler:${butterKnifeVersion}",
-            "retrofit2-fastjson-converter": "com.github.BaronZ88:Retrofit2-FastJson-Converter:1.2",
 
-            "fragmentation"               :  'me.yokeyword:fragmentation:0.10.5'
+            "fragmentation"               : 'me.yokeyword:fragmentation:0.10.5'
     ]
 }
